[gd_scene load_steps=43 format=3 uid="uid://d1huichr7pt8c"]

[ext_resource type="Script" uid="uid://b2e2n7y0q4emx" path="res://Cenas/Enemy/Bosses/ghost_boss.gd" id="1_21eog"]
[ext_resource type="Texture2D" uid="uid://bqh5hf6cggxvu" path="res://Assets/Enemies/MegaGhost (Boss))/spr_boss_modelo.png" id="2_5a185"]
[ext_resource type="Script" uid="uid://bnmqjw0nwa0nl" path="res://Cenas/Enemy/Bosses/dinamic_life_bar.gd" id="3_t6okw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qm0in"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmp6d"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e127"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48nrl"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8584"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4pj2"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2ids"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdx6n"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seypm"]
atlas = ExtResource("2_5a185")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7115"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlvbq"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_830n5"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kvia"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6okw"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu7t7"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2c4w"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m74vh"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e24ac"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx16w"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a8e4"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa63i"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyppu"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a41hs"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr7xv"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fjhf"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a185"]
atlas = ExtResource("2_5a185")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8po4"]
atlas = ExtResource("2_5a185")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v6ms"]
atlas = ExtResource("2_5a185")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_247cf"]
atlas = ExtResource("2_5a185")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c8po4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm0in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmp6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e127")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48nrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8584")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4pj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2ids")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdx6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seypm")
}],
"loop": false,
"name": &"die",
"speed": 9.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_r7115")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_tlvbq")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_830n5")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_6kvia")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t6okw")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cu7t7")
}],
"loop": false,
"name": &"laugh",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2c4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m74vh")
}],
"loop": true,
"name": &"loop_partial_die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e24ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx16w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a8e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa63i")
}],
"loop": false,
"name": &"partial_die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyppu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a41hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr7xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fjhf")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a185")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8po4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v6ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_247cf")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5a185"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cu7t7"]
radius = 41.0122

[sub_resource type="Gradient" id="Gradient_cu7t7"]
offsets = PackedFloat32Array(0.942029, 1)
colors = PackedColorArray(1, 0, 0, 0.239216, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t6okw"]
gradient = SubResource("Gradient_cu7t7")
fill = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_t6okw"]
radius = 13.0384

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cu7t7"]
bg_color = Color(0, 0, 0, 1)
shadow_color = Color(0.0197876, 3.85422e-09, 1.50409e-09, 0.6)
shadow_size = 5
shadow_offset = Vector2(20, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6okw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlvbq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7115"]
bg_color = Color(0.928641, 2.79158e-06, 5.77569e-07, 1)

[node name="GhostBoss" type="Node2D" node_paths=PackedStringArray("slash_node", "slash_node_timer", "area_attack_ghosts_run", "life_bar", "damage_bar", "body", "anim")]
script = ExtResource("1_21eog")
slash_node = NodePath("BossBody/SlashNode")
slash_node_timer = NodePath("BossBody/SlashNode/SlashView/TimerToHideView")
area_attack_ghosts_run = NodePath("BossBody/SpecialUtils/AreaAttackToGhostsRun")
life_bar = NodePath("DinamicLifeBar/DamageBar/LifeBar")
damage_bar = NodePath("DinamicLifeBar/DamageBar")
speed = 80
body = NodePath("BossBody")
anim = NodePath("BossBody/AnimatedSprite2D")
metadata/_edit_horizontal_guides_ = [-82.0]
metadata/_edit_vertical_guides_ = [1152.0]

[node name="BossBody" type="CharacterBody2D" parent="."]
scale = Vector2(1.3, 1.3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BossBody"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_c8po4")
animation = &"laugh"
frame = 15
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody"]
visible = false
shape = SubResource("CircleShape2D_5a185")

[node name="SlashNode" type="Node2D" parent="BossBody"]
visible = false

[node name="SlashArea" type="Area2D" parent="BossBody/SlashNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/SlashNode/SlashArea"]
shape = SubResource("CircleShape2D_cu7t7")
debug_color = Color(0.995262, 0, 0.208311, 0.42)

[node name="SlashView" type="TextureRect" parent="BossBody/SlashNode"]
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.67, 0.67)
texture = SubResource("GradientTexture2D_t6okw")

[node name="TimerToHideView" type="Timer" parent="BossBody/SlashNode/SlashView"]
wait_time = 0.1

[node name="SpecialUtils" type="Node2D" parent="BossBody"]

[node name="AreaAttackToGhostsRun" type="Area2D" parent="BossBody/SpecialUtils"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/SpecialUtils/AreaAttackToGhostsRun"]
shape = SubResource("CircleShape2D_t6okw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="BossBody/SpecialUtils"]
position = Vector2(-3.57628e-07, 0.769231)
scale = Vector2(1.30769, 1.23077)

[node name="DinamicLifeBar" type="CanvasLayer" parent="." node_paths=PackedStringArray("boss", "timer")]
script = ExtResource("3_t6okw")
boss = NodePath("..")
timer = NodePath("UpdateLifeTimer")

[node name="DamageBar" type="ProgressBar" parent="DinamicLifeBar"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 228.0
offset_top = 583.0
offset_right = -148.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cu7t7")
theme_override_styles/fill = SubResource("StyleBoxFlat_t6okw")
value = 75.0
show_percentage = false

[node name="LifeBar" type="ProgressBar" parent="DinamicLifeBar/DamageBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tlvbq")
theme_override_styles/fill = SubResource("StyleBoxFlat_r7115")
value = 50.0
show_percentage = false

[node name="UpdateLifeTimer" type="Timer" parent="DinamicLifeBar"]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="BossBody/SlashNode/SlashArea" to="." method="_on_slash_player_body_entered"]
[connection signal="body_exited" from="BossBody/SlashNode/SlashArea" to="." method="_on_slash_area_player_body_exited"]
[connection signal="timeout" from="BossBody/SlashNode/SlashView/TimerToHideView" to="." method="_on_timer_to_hide_view_timeout"]
[connection signal="body_entered" from="BossBody/SpecialUtils/AreaAttackToGhostsRun" to="." method="_on_area_attack_to_ghosts_run_player_body_entered"]
[connection signal="body_exited" from="BossBody/SpecialUtils/AreaAttackToGhostsRun" to="." method="_on_area_attack_to_ghosts_run_player_body_exited"]
[connection signal="screen_exited" from="BossBody/SpecialUtils/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DinamicLifeBar/UpdateLifeTimer" to="DinamicLifeBar" method="_on_timer_to_update_life"]
